--- a/frontend/src/assets/memberPage/Login.module.css
+++ b/frontend/src/assets/memberPage/Login.module.css
@@ -1,15 +1,23 @@
 @font-face {
-  font-family: "bc_b";
-  src: url(/public/fonts/BCcardB.ttf);
+  font-family: "noto_m";
+  src: url(/fonts/NotoSansKR-Medium.ttf);
 }
 
 @font-face {
-  font-family: "bc_l";
-  src: url(/public/fonts/BCcardL.ttf);
+  font-family: "roboto_m";
+  src: url(/fonts/Roboto-Medium.ttf);
+}
+
+.login_container {
+  display: flex;
+  flex-direction: column;
 }
 
 .login_app_name {
   font-family: "bc_b";
   font-size: 5rem;
-  color: #3B3934;
+}
+
+.google_login_btn {
+  margin: 2rem 0 2rem 0;
 }
