--- a/frontend/src/assets/mainPage/Main.module.css
+++ b/frontend/src/assets/mainPage/Main.module.css
@@ -14,6 +14,302 @@
     width: 100vw;
 }
 
+.modal_background{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 2;
+
+}
+
+.halli_modal_container{
+    width: 22rem;
+    height: 25rem;
+    top: 50%;
+    left: 50%;
+    z-index: 3;
+    position: absolute;
+    border-radius: 30px;
+    transform: translate(-50%, -50%);
+    background: #FFDD71;
+
+}
+
+.halli_title_container{
+    position: relative;
+    display: flex;
+    top: 10%;
+    left: 50%;
+    width: 22rem;
+    height: 4rem ;
+    transform: translate(-50%, -50%);
+}
+
+.halli_modal_title{
+    width: 13rem;
+    font-family: "bc_b";
+    font-size: 1.8rem;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+}
+
+.halli_modal_x{
+    position: absolute;
+    top: 40%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: 2rem;
+}
+
+.halli_list_container{
+    width: 20rem;
+    height: 19rem;
+    top: 57.5%;
+    left: 50%;
+    z-index: 3;
+    position: absolute;
+    border-radius: 30px;
+    transform: translate(-50%, -50%);
+    background: #FFFBF3;
+}
+
+.halli_names_container{
+    width: 20rem;
+    height: 19rem;
+    position: relative;
+    border-radius: 30px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.halli_name_container{
+    width: 18.7rem;
+    height: 4.5rem;
+    margin: 0.7rem;
+    position: relative;
+    border-radius: 20px;
+    align-items: center;
+    display: flex;
+    background: #FFF2CB;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.halli_img_container{
+    width: 3.8rem;
+    height: 3.8rem;
+    border-radius: 50px;
+    margin-left: 2.5%;
+    object-fit: cover;
+}
+
+.halli_name_txt{
+    width: 7rem;
+    height: fit-content;
+    font-family: "bc_b";
+    margin-left: 2%;
+    font-size: 1rem;
+}
+
+.halli_btn_container{
+    width: 8rem;
+    height: 4.5rem;
+    font-family: "bc_b";
+    border-radius: 20px;
+    margin-left: 2%;
+    margin-right: 3%;
+    font-size: 1rem;
+    align-items: center;
+    display: flex;
+}
+
+.halli_ok_btn{
+    width: 3.5rem;
+    height: 2.5rem;
+    border-radius: 10px;
+    background: #C2ED7B;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.halli_no_btn{
+    width: 3.5rem;
+    height: 2.5rem;
+    border-radius: 10px;
+    background: #E98B8B;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);    margin-left: 3%;
+}
+
+.galli_modal_container{
+    width: 22rem;
+    height: 25rem;
+    top: 50%;
+    left: 50%;
+    z-index: 3;
+    position: absolute;
+    border-radius: 30px;
+    transform: translate(-50%, -50%);
+    background: #FFDD71;
+
+}
+
+.galli_title_container{
+    position: relative;
+    display: flex;
+    top: 10%;
+    left: 50%;
+    width: 22rem;
+    height: 4rem ;
+    transform: translate(-50%, -50%);
+}
+
+.galli_modal_title{
+    width: 13rem;
+    font-family: "bc_b";
+    font-size: 1.8rem;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+}
+
+.galli_modal_x{
+    position: absolute;
+    top: 40%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: 2rem;
+}
+
+.galli_search_container{
+    width: 20rem;
+    height: 5rem;
+    top: 25%;
+    left: 50%;
+    z-index: 3;
+    position: absolute;
+    border-radius: 30px;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+}
+
+.galli_search_box{
+    width: 16rem;
+    height: 3.4rem;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    background: #FFFBF3;
+    font-family: "bc_b";
+    font-size: 1.5rem;
+    margin-left: 1%;
+}
+
+.galli_search_icon{
+    height: 3.5rem;
+    width: auto;
+    margin-left: 1%;
+}
+
+.galli_list_container{
+    width: 20rem;
+    height: 15rem;
+    top: 65.6%;
+    left: 50%;
+    z-index: 3;
+    position: absolute;
+    border-radius: 30px;
+    transform: translate(-50%, -50%);
+    background: #FFFBF3;
+}
+
+.galli_names_container{
+    width: 20rem;
+    height: 14.9rem;
+    position: relative;
+    border-radius: 30px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.galli_name_container{
+    width: 18.7rem;
+    height: 4.5rem;
+    margin: 0.7rem;
+    position: relative;
+    border-radius: 20px;
+    align-items: center;
+    display: flex;
+    background: #FFF2CB;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.galli_img_container{
+    width: 3.8rem;
+    height: 3.8rem;
+    border-radius: 50px;
+    margin-left: 2.5%;
+    object-fit: cover;
+}
+
+.galli_name_txt{
+    width: 7rem;
+    height: fit-content;
+    font-family: "bc_b";
+    margin-left: 2%;
+    font-size: 1rem;
+}
+
+.galli_btn_container{
+    width: 4rem;
+    height: 4.5rem;
+    font-family: "bc_b";
+    border-radius: 20px;
+    margin-left: 18%;
+    margin-right: 3%;
+    font-size: 1rem;
+    align-items: center;
+    display: flex;
+}
+
+.galli_put_btn{
+    width: 3.5rem;
+    height: 2.5rem;
+    border-radius: 10px;
+    background: #FFCB23;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.galli_delete_btn{
+    width: 3.5rem;
+    height: 2.5rem;
+    border-radius: 10px;
+    background: #E98B8B;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);    margin-left: 3%;
+}
+
+
+.btn_txt{
+    font-family: "bc_b";
+    font-size: 1.1rem;
+}
+
 .tab_container{
     height: 18.75rem;
     width: 22.5rem;
@@ -76,6 +372,8 @@
 }
 
 .my_progress_container{
+    position: absolute;
+    top: 28%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -286,6 +584,38 @@
     font-family: "bc_b";
 }
 
+.halli_content{
+    width: 22.5rem;
+    height: 18rem;
+    border-top-right-radius: 0.938rem;
+    border-bottom-left-radius: 0.938rem;
+    border-bottom-right-radius: 0.938rem;
+    background: #FFFEFC;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0.113rem 0.225rem 0.5rem 0 rgba(0, 0, 0, 0.3);
+
+}
+
+.halli_container{
+    width: 22.5rem;
+    height: 12rem;
+    position: relative;
+    display: flex;
+    top: 5%;
+}
+
+.halli_detail{
+    position: absolute;
+    left: 5%;
+    top: -10%;
+    font-family: "bc_b";
+    font-size: 1.4rem;
+}
+
+
+
 .no_halli_content{
     width: 22.5rem;
     height: 18rem;
@@ -298,6 +628,10 @@
     text-align: center;
     box-shadow: 0.113rem 0.225rem 0.5rem 0 rgba(0, 0, 0, 0.3);
 
+}
+
+.my_halli_list_container{
+    
 }
 
 .no_halli_container{
@@ -364,7 +698,7 @@
     font-family: "bc_b";
 }
 
-.galli_content{
+.no_galli_content{
     width: 22.5rem;
     height: 18rem;
     border-top-right-radius: 0.938rem;
@@ -374,17 +708,63 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    display: flex;
     box-shadow: 0.113rem 0.225rem 0.5rem 0 rgba(0, 0, 0, 0.3);
 
 }
 
+.no_galli_container{
+    width: 22.5rem;
+    height: 12rem;
+    position: relative;
+    display: flex;
+    top: 5%;
+}
+
+.no_galli_detail{
+    position: absolute;
+    left: 8%;
+    font-family: "bc_b";
+    font-size: 2.2rem;
+    line-height: 2.5rem
+}
+
+.no_galli_img{
+    position: absolute;
+    height: 13rem;
+    width: auto;
+    top: -15%;
+    left: 53%;
+}
+
+.no_galli_btn{
+    position: absolute;
+    width: 15rem;
+    height: 3.8rem;
+    background: #FFCB23;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 1.5rem;
+    box-shadow: 0.113rem 0.225rem 0.5rem 0 rgba(0, 0, 0, 0.3);
+}
+
+.no_galli_btn_txt{
+    position: absolute;
+    font-family: "bc_b";
+    font-size: 1.5rem;
+    width: 15rem;
+    top: 14%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 .week_graph_container{
     height: 23.75rem;
     width: 22.5rem;
-    position: absolute;
     top: 68.5%;
     left: 50%;
+    position: absolute;
     transform: translate(-50%, -50%);
 }
 
