--- a/frontend/src/assets/mainPage/Main.module.css
+++ b/frontend/src/assets/mainPage/Main.module.css
@@ -655,6 +655,10 @@
     border-radius: 0.938rem;
 }
 
+.halli_mission_container{
+
+}
+
 .halli_time_progress_move{
     height: 1.8rem;
     background: #FFCB23;
