--- a/frontend/src/assets/mainPage/Main.module.css
+++ b/frontend/src/assets/mainPage/Main.module.css
@@ -49,8 +49,8 @@
 .halli_modal_title{
     width: 13rem;
     font-family: "bc_b";
-    font-size: 1.8rem;
-    top: 10%;
+    font-size: 1.6rem;
+    top: 17%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -148,6 +148,114 @@
     box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);    margin-left: 3%;
 }
 
+.my_halli_list_modal_container{
+    width: 22rem;
+    height: 25rem;
+    top: 50%;
+    left: 50%;
+    z-index: 3;
+    position: absolute;
+    border-radius: 30px;
+    transform: translate(-50%, -50%);
+    background: #FFDD71;
+
+}
+
+.my_halli_list_title_container{
+    position: relative;
+    display: flex;
+    top: 10%;
+    left: 50%;
+    width: 22rem;
+    height: 4rem ;
+    transform: translate(-50%, -50%);
+}
+
+.my_halli_list_modal_title{
+    width: 13rem;
+    font-family: "bc_b";
+    font-size: 1.6rem;
+    top: 17%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+}
+
+.my_halli_list_modal_x{
+    position: absolute;
+    top: 40%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: 2rem;
+}
+
+.my_halli_list_list_container{
+    width: 20rem;
+    height: 19rem;
+    top: 57.5%;
+    left: 50%;
+    z-index: 3;
+    position: absolute;
+    border-radius: 30px;
+    transform: translate(-50%, -50%);
+    background: #FFFBF3;
+}
+
+.my_halli_list_names_container{
+    width: 20rem;
+    height: 19rem;
+    position: relative;
+    border-radius: 30px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.my_halli_list_name_container{
+    width: 18.7rem;
+    height: 4.5rem;
+    margin: 0.7rem;
+    position: relative;
+    border-radius: 20px;
+    align-items: center;
+    display: flex;
+    background: #FFF2CB;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.my_halli_list_img_container{
+    width: 3.8rem;
+    height: 3.8rem;
+    border-radius: 50px;
+    margin-left: 2.5%;
+    object-fit: cover;
+}
+
+.my_halli_list_name_txt{
+    width: 7rem;
+    height: fit-content;
+    font-family: "bc_b";
+    margin-left: 2%;
+    font-size: 1rem;
+}
+
+.my_halli_list_btn_container{
+    width: 2rem;
+    height: 4.5rem;
+    font-family: "bc_b";
+    border-radius: 20px;
+    margin-left: 27%;
+    margin-right: 3%;
+    font-size: 1rem;
+    align-items: center;
+    display: flex;
+}
+
+.direct_btn{
+    height: 1.8rem;
+    width: auto;
+}
+
 .galli_modal_container{
     width: 22rem;
     height: 25rem;
@@ -174,7 +282,7 @@
 .galli_modal_title{
     width: 13rem;
     font-family: "bc_b";
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -204,21 +312,23 @@
 }
 
 .galli_search_box{
-    width: 16rem;
-    height: 3.4rem;
-    border-radius: 20px;
+    width: 13.7rem;
+    height: 1.9rem;
+    border-radius: 18px;
     border: none;
     outline: none;
     background: #FFFBF3;
     font-family: "bc_b";
     font-size: 1.5rem;
-    margin-left: 1%;
+    margin-left: 2.5%;
+    padding: 0.8rem;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .galli_search_icon{
-    height: 3.5rem;
+    height: 3rem;
     width: auto;
-    margin-left: 1%;
+    margin-left: 3%;
 }
 
 .galli_list_container{
@@ -309,6 +419,8 @@
     font-family: "bc_b";
     font-size: 1.1rem;
 }
+
+
 
 .tab_container{
     height: 18.75rem;
@@ -656,7 +768,7 @@
 }
 
 .halli_mission_container{
-
+    width: 5rem;
 }
 
 .halli_time_progress_move{
