feat: 하단바 화면 구현

--- a/frontend/src/assets/common/navbar/Navbar.module.css
+++ b/frontend/src/assets/common/navbar/Navbar.module.css
@@ -7,13 +7,51 @@
     z-index: 4;
     width: 100vw;
     height: 4rem;
-    border: 2px solid red;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid red;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-name: anim1;
 }
 
 .rank_item{
     width: auto;
-    height: 4rem;
+    height: 2.3rem;
+    z-index: 5; 
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
+.run_item{
+    width: auto;
+    height: 2.3rem;
+    z-index: 5; 
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
+.home_item{
+    width: auto;
+    height: 2.2rem;
+    z-index: 5; 
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
+.friend_item{
+    width: auto;
+    margin-top: 1%;
+    height: 2.6rem;
     z-index: 5;
-    margin-right: 10px;
-    border: 2px solid red;
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
+.my_item{
+    width: auto;
+    height: 2.2rem;
+    z-index: 5; 
+    margin-right: 5%;
+    margin-left: 5%;
 }
