--- a/frontend/src/assets/memberPage/Login.module.css
+++ b/frontend/src/assets/memberPage/Login.module.css
@@ -1,15 +1,102 @@
+/* Login.css */
 .login_container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .login_app_name {
   font-family: "bc_b";
-  font-size: 5rem;
+  font-size: 4.5rem;
+}
+
+.login_img {
+  width: 80dvw;
 }
 
 .google_login_btn {
   width: 75%;
   margin: 2rem 0 2rem 0;
 }
+
+/* LoginRedirect.css */
+.login_redirect_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100dvh;
+  transform: translateY(-3rem);
+}
+
+.login_loading_img {
+  width: 80dvw;
+  height: auto;
+  max-width: 32rem;
+  transform: translateX(-1.5rem);
+}
+
+.login_loading_txt {
+  font-family: "bc_b";
+  font-size: xx-large;
+  transform: translateY(-3rem);
+}
+
+/* SignUp.css */
+.signup_container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100dvw;
+  height: 100dvh;
+}
+
+/* .container {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: all 1s ease;  부드러운 전환 효과 적용 
+  overflow: hidden; 컨테이너의 크기 변화에 따라 내용이 잘리지 않도록 
+} */
+
+/* input[type="text"],
+select,
+input[type="radio"] + label {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+input[type="radio"] {
+  margin-right: 5px;
+}
+
+button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: black;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.label-inline {
+  display: flex;
+  align-items: center;
+  margin-left: 5px;
+}
+
+.hidden {
+  display: none;
+} */
+
