--- a/frontend/src/assets/mainPage/Main.module.css
+++ b/frontend/src/assets/mainPage/Main.module.css
@@ -10,6 +10,10 @@
 
 .main_container {
     position: relative;
+    display: flex;
+    flex-direction: column; /* 세로로 배치 */
+    align-items: center;
+    justify-content: center;
     height: 100vh;
     width: 100vw;
 }
@@ -19,7 +23,7 @@
     height: 100%;
     position: absolute;
     background: rgba(0, 0, 0, 0.6);
-    z-index: 2;
+    z-index: 10;
 
 }
 
@@ -28,7 +32,7 @@
     height: 25rem;
     top: 50%;
     left: 50%;
-    z-index: 3;
+    z-index: 11;
     position: absolute;
     border-radius: 30px;
     transform: translate(-50%, -50%);
@@ -70,7 +74,7 @@
     height: 19rem;
     top: 57.5%;
     left: 50%;
-    z-index: 3;
+    z-index: 11;
     position: absolute;
     border-radius: 30px;
     transform: translate(-50%, -50%);
@@ -153,7 +157,7 @@
     height: 25rem;
     top: 50%;
     left: 50%;
-    z-index: 3;
+    z-index: 11;
     position: absolute;
     border-radius: 30px;
     transform: translate(-50%, -50%);
@@ -195,7 +199,7 @@
     height: 19rem;
     top: 57.5%;
     left: 50%;
-    z-index: 3;
+    z-index: 11;
     position: absolute;
     border-radius: 30px;
     transform: translate(-50%, -50%);
@@ -261,7 +265,7 @@
     height: 25rem;
     top: 50%;
     left: 50%;
-    z-index: 3;
+    z-index: 11;
     position: absolute;
     border-radius: 30px;
     transform: translate(-50%, -50%);
@@ -303,7 +307,7 @@
     height: 5rem;
     top: 25%;
     left: 50%;
-    z-index: 3;
+    z-index: 11;
     position: absolute;
     border-radius: 30px;
     transform: translate(-50%, -50%);
@@ -336,7 +340,7 @@
     height: 15rem;
     top: 65.6%;
     left: 50%;
-    z-index: 3;
+    z-index: 11;
     position: absolute;
     border-radius: 30px;
     transform: translate(-50%, -50%);
@@ -421,15 +425,14 @@
 }
 
 
-
-.tab_container{
+/* .tab_container{
     height: 18.75rem;
     width: 22.5rem;
     position: absolute;
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
+} */
 
 .mode_choose{
     width: 5rem;
@@ -484,8 +487,8 @@
 }
 
 .my_progress_container{
-    position: absolute;
-    top: 28%;
+    /* position: absolute;
+    top: 28%; */
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -979,10 +982,11 @@
 .week_graph_container{
     height: 23.75rem;
     width: 22.5rem;
-    top: 68.5%;
+    margin-top: 4%;
+    /* top: 68.5%;
     left: 50%;
     position: absolute;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
 }
 
 .week_content_container{
