--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-  font-family: "bc_l", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "bc_b", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
