--- a/frontend/src/assets/common/navbar/Navbar.module.css
+++ b/frontend/src/assets/common/navbar/Navbar.module.css
@@ -9,6 +9,8 @@
     height: 4rem;
     align-items: center;
     justify-content: center;
+    background: white;
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1); /* 하단 그림자 추가 */;
 }
 
 
