--- a/frontend/src/assets/mainPage/Main.module.css
+++ b/frontend/src/assets/mainPage/Main.module.css
@@ -770,6 +770,32 @@
     border-radius: 0.938rem;
 }
 
+.halli_mission_container{
+    position: absolute;
+    width: 4rem;
+    height: 4rem;
+    bottom: 2.5rem;
+    border-radius: 3rem;
+    background-repeat: no-repeat;
+    z-index: 5;
+    background-size: contain;
+    display: flex;
+    align-items: center;
+}
+.halli_mission_profile{
+    background: white;
+    border-radius: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    margin: 0.4rem 0 1rem 0.43rem;
+}
+.halli_mission_profile img{
+    width: 2.1rem;
+    height: 2.1rem;
+    border-radius: 3rem;
+    margin-top: 0.2rem;
+}
+
 .halli_time_progress_move{
     height: 1.8rem;
     background: #FFCB23;
