--- a/frontend/src/assets/mainPage/Main.module.css
+++ b/frontend/src/assets/mainPage/Main.module.css
@@ -780,6 +780,7 @@
     z-index: 5;
     background-size: contain;
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 .halli_mission_profile{
@@ -787,13 +788,18 @@
     border-radius: 3rem;
     width: 2.5rem;
     height: 2.5rem;
-    margin: 0.4rem 0 1rem 0.43rem;
+    margin: 0.4rem 0 1rem -0.6rem;
 }
 .halli_mission_profile img{
     width: 2.1rem;
     height: 2.1rem;
     border-radius: 3rem;
     margin-top: 0.2rem;
+}
+.halli_mission_container h4{
+    margin: 2.9rem 0.5rem 0 0;
+    font-size: 1rem;
+    font-family: "bc_b";
 }
 
 .halli_time_progress_move{
