feat: 랭킹화면 탭바 및 화면 디자인 전체 구현

--- a/frontend/src/assets/rankPage/Rank.module.css
+++ b/frontend/src/assets/rankPage/Rank.module.css
@@ -173,10 +173,21 @@
     margin-top: 3%;
     border-radius: 0.938rem;
     background: #FFF2CB;
+    box-shadow: 0.013rem 0.013rem 0.2rem 0 rgba(0, 0, 0, 0.3);
+
+}
+
+.top3_ranks{
+    width: 19.4rem;
+    height: 12rem;
+    border-radius: 0.938rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .first_rank_container{
-    width: 6rem;
+    width: 6.4rem;
     height: 12rem;
     display: flex;
     flex-direction: column;
@@ -185,6 +196,359 @@
 }
 
 .first_rank_title{
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-family: "bc_b";
+    margin-top: 2%;
+}
+
+.first_rank_crown{
+    width: auto;
+    height: 2rem;
+    margin-top: -28%;
+}
+
+.first_rank_profile_container{
+    width: 5.6rem;
+    height: 7rem;
+    background: #FFFEFC;   
+    border-radius: 0.938rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.first_rank_img{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 20rem;
+    margin-top: 25%;
+}
+
+.first_rank_name{
+    font-family: "bc_b";
+    font-size: 1rem;
+    margin-top: 5%;
+}
+
+.day_ranks_container{
+    width: 20.4rem;
+    height: 18rem;
+    margin-top: 1%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.day_rank_friend_container{
+    width:18.4rem;
+    height: 5.5rem;
+    position: relative;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background: #FFF2CB;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.day_rank_txt{
+    font-size: 3rem;
+    font-family: "bc_b";
+    margin-left: 3%;
+}
+
+.day_rank_friend_img_container{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50px;
+    margin-left: 3%;
+    object-fit: cover;
+}
+
+.day_rank_friend_name_txt{
+    width: 8rem;
+    height: fit-content;
+    text-align: left;
+    font-size: 1.1rem;
+    margin-left: 3%;
+}
+
+.day_rank_walk_num{
+    width: 7rem;
+    margin-left: 3%;
+    margin-right: 3%;
+    height: fit-content;
+    font-size: 1.2rem;
+}
+
+.day_rank_my_container{
+    width:20.4rem;
+    height: 5.5rem;
+    position: absolute;
+    border-radius: 0.938rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background: #FFFEFC;
+    margin-top: 118.5%;
+    margin-bottom: 3%;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.day_rank_my_txt{
+    font-size: 3rem;
+    font-family: "bc_b";
+    margin-left: 3%;
+}
+
+.day_rank_my_img_container{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50px;
+    margin-left: 3%;
+    object-fit: cover;
+}
+
+.day_rank_my_name_txt{
+    width: 8rem;
+    height: fit-content;
+    text-align: left;
+    font-size: 1.1rem;
+    margin-left: 3%;
+}
+
+.day_rank_my_walk_num{
+    width: 7rem;
+    margin-left: 3%;
+    margin-right: 3%;
+    height: fit-content;
+    font-size: 1.2rem;
+}
+
+.week_rank_container{
+    width: 20.4rem;
+    height: 35rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2.5%;
+}
+
+.rank_week{
+    width: 19.4rem;
+    height: 4rem;
+    margin-top: 2%;
+    border-radius: 0.938rem;
+    background: #FFDD71;
+    border: 2px solid #EACB68;
+    font-family: "bc_b";
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.month_rank_container{
+    width: 20.4rem;
+    height: 35rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2.5%;
+}
+
+.rank_month{
+    width: 19.4rem;
+    height: 4rem;
+    margin-top: 2%;
+    border-radius: 0.938rem;
+    background: #FFDD71;
+    border: 2px solid #EACB68;
+    font-family: "bc_b";
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.strick_rank_container{
+    width: 20.4rem;
+    height: 35rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2.5%;
+}
+
+.strick_top_rank_container{
+    width: 19.4rem;
+    height: 12rem;
+    margin-top: -20%;
+    border-radius: 0.938rem;
+    background: #FFF2CB;
+    box-shadow: 0.013rem 0.013rem 0.2rem 0 rgba(0, 0, 0, 0.3);
+
+}
+
+.strick_top3_ranks{
+    width: 19.4rem;
+    height: 12rem;
+    border-radius: 0.938rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.strick_first_rank_container{
+    width: 6.4rem;
+    height: 12rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "bc_b";
+}
+
+.strick_first_rank_title{
+    font-size: 1.7rem;
+    font-family: "bc_b";
+    margin-top: 2%;
+}
+
+.strick_first_rank_crown{
+    width: auto;
+    height: 2rem;
+    margin-top: -28%;
+}
+
+.strick_first_rank_profile_container{
+    width: 5.6rem;
+    height: 7rem;
+    background: #FFFEFC;   
+    border-radius: 0.938rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.strick_first_rank_img{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 20rem;
+    margin-top: 25%;
+}
+
+.strick_first_rank_name{
+    font-family: "bc_b";
+    font-size: 1rem;
+    margin-top: 5%;
+}
+
+.strick_ranks_container{
+    width: 20.4rem;
+    height: 18rem;
+    margin-top: 2%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.strick_rank_friend_container{
+    width:18.4rem;
+    height: 5.5rem;
+    position: relative;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background: #FFF2CB;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.strick_rank_txt{
+    font-size: 3rem;
+    font-family: "bc_b";
+    margin-left: 3%;
+}
+
+.strick_rank_friend_img_container{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50px;
+    margin-left: 3%;
+    object-fit: cover;
+}
+
+.strick_rank_friend_name_txt{
+    width: 8rem;
+    height: fit-content;
+    text-align: left;
+    font-size: 1.1rem;
+    margin-left: 3%;
+}
+
+.strick_rank_walk_num{
+    width: 7rem;
+    margin-left: 3%;
+    margin-right: 3%;
+    height: fit-content;
+    font-size: 1.2rem;
+}
+
+.strick_rank_my_container{
+    width:20.4rem;
+    height: 5.5rem;
+    position: absolute;
+    border-radius: 0.938rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background: #FFFEFC;
+    margin-top: 125.5%;
+    margin-bottom: 3%;
+    box-shadow: 0.01rem 0.01rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.strick_rank_my_txt{
+    font-size: 3rem;
+    font-family: "bc_b";
+    margin-left: 3%;
+}
+
+.strick_rank_my_img_container{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50px;
+    margin-left: 3%;
+    object-fit: cover;
+}
+
+.strick_rank_my_name_txt{
+    width: 8rem;
+    height: fit-content;
+    text-align: left;
+    font-size: 1.1rem;
+    margin-left: 3%;
+}
+
+.strick_rank_my_walk_num{
+    width: 7rem;
+    margin-left: 3%;
+    margin-right: 3%;
+    height: fit-content;
+    font-size: 1.2rem;
 }
