--- a/frontend/src/assets/memberPage/Login.module.css
+++ b/frontend/src/assets/memberPage/Login.module.css
@@ -11,10 +11,6 @@
   font-size: 4.5rem;
 }
 
-/* .login_img {
-  width: 80dvw;
-} */
-
 .google_login_btn {
   width: 75%;
   margin: 2rem 0 2rem 0;
@@ -43,48 +39,54 @@
 }
 
 /* SignUp.css */
-.signup_form {
+.signup_container {
   display: flex;
   flex-direction: column;
-  /* width: 100dvw; */
-  /* height: 100dvh; */
-  /* justify-content: space-between; */
-  transition: all 1s ease;
-  font-size: 1rem;
+  width: 90dvw;
+  transition: all 0.5s ease;
+  margin: 1.5rem auto;
 }
 
 .signup_title {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin: 1rem;
   font-size: 1.2rem;
+  margin: 0.5rem 0;
 }
 
 .signup_input {
   display: block;
-  width: 80dvw;
+  width: 100%;
+  box-sizing: border-box;
+  appearance: none;
   padding: 1rem;
-  margin: 1rem;
+  margin: 0.5rem 0;
   border: 1px solid #ccc;
   border-radius: 0.8rem;
 }
 
-.signup_input::placeholder {
-  font-size: 1rem;
-}
-
 .signup_btn {
   background-color: #FFCB23;
-  width: 80dvw;
-  padding: 0.8rem 1rem;
+  padding: 1rem;
   border: none;
   border-radius: 2rem;
   cursor: pointer;
-  margin: 1rem auto;
+  margin: 1rem 0;
+  font-size: 1.2rem;
 }
 
 .signup_btn:disabled {
   background-color: #cccccc;
   cursor: not-allowed;
+}
+
+.signup_error {
+  display: flex;
+  font-size: 0.8rem;
+  margin: 0.5rem;
+}
+
+.signup_2col {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.5rem;
 }
