--- a/frontend/src/assets/myPage/Mypage.module.css
+++ b/frontend/src/assets/myPage/Mypage.module.css
@@ -1,10 +1,10 @@
 
-.main_container {
-    position: relative;
+.mypage_container {
+    /* position: relative;
     display: flex;
-    flex-direction: column; /* 세로로 배치 */
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 100vw;
+    justify-content: center; */
+    height: 100dvh;
+    width: 100dvw;
 }
