--- a/frontend/src/assets/common/toolbar/Toolbar.module.css
+++ b/frontend/src/assets/common/toolbar/Toolbar.module.css
@@ -1,15 +1,16 @@
 .tool_container{
     position: fixed;
     display: flex;
-    top: 5%;
+    top: 4%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 5;
     width: 100vw;
-    height: 5rem;
+    height: 4rem;
     align-items: center;
     justify-content: center;
     background: white;
+    border: 2px solid red;
 }
 
 .all_money_container{
