--- a/frontend/src/assets/mainPage/Main.module.css
+++ b/frontend/src/assets/mainPage/Main.module.css
@@ -16,7 +16,6 @@
     justify-content: center;
     height: 100vh;
     width: 100vw;
-    overflow-y: auto;
 }
 
 .modal_background{
@@ -427,11 +426,14 @@
 }
 
 
-.tab_container{
-    height: fit-content;
-    width: 22.5rem;   
-    margin-top: 5rem;
-}
+/* .tab_container{
+    height: 18.75rem;
+    width: 22.5rem;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} */
 
 .mode_choose{
     width: 5rem;
@@ -1174,7 +1176,6 @@
     height: 23.75rem;
     width: 22.5rem;
     margin-top: 4%;
-    margin-bottom: 5rem;;
     /* top: 68.5%;
     left: 50%;
     position: absolute;
