--- a/frontend/src/Layout.module.css
+++ b/frontend/src/Layout.module.css
@@ -1,21 +1,10 @@
 .layoutContainer {
-  display: flex;
-  flex-direction: column;
-  height: 100dvh;
-  width: 100dvw;
-}
-
-.toolbar {
-  height: 5rem;
-}
-
-.navbar {
-  height: 4rem;
+  height: 100vh;
+  width: 100vw;
 }
 
 .content {
-  flex: 1;
-  /* overflow-y: auto; */
-  /* padding: 2rem 0; */
-  margin: auto 0;
+  padding: 4.5rem 0;
+  /* margin-bottom: 4.5rem; */
+  overflow-y: scroll;
 }
