--- a/frontend/src/assets/common/toolbar/Toolbar.module.css
+++ b/frontend/src/assets/common/toolbar/Toolbar.module.css
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     background: white;
+
 }
 
 .all_money_container{
@@ -20,6 +21,7 @@
     align-items: center;
     justify-content: center;
     margin-left: 54%;
+    margin-top: 1%;
 }
 
 .egg_container{
@@ -57,6 +59,6 @@
 }
 
 .bell{
-    height: 4rem;
+    height: 3.8rem;
     width: auto;
 }
